# home_journal

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  Containerfile  MANIFEST.in  README.md  cspell.config.yaml  podman_run.sh  pyproject.toml
.config/: dictionary.txt  requirements-dev.txt  requirements.in  requirements.in.dev
sample_site/: index.html  manifest.webmanifest  sw.js
sample_site/authors/: unknown.html
sample_site/css/: github-markdown.css  site.css
sample_site/js/: material-dynamic-colors.min.js  new.js  post.js  site.js
sample_site/posts/2023/02/2023-02-27T11:47:00.984360-08:00_this-is-a-car/: index.html  post.md
sample_site/posts/2023/02/2023-02-27T11:47:48.814207-08:00_this-is-a-boat/: index.html  post.md
sample_site/posts/2023/02/2023-02-27T11:48:33.539298-08:00_this-is-nature/: index.html  post.md
sample_site/posts/2023/02/2023-02-27T11:49:31.291819-08:00_these-are-people/: index.html  post.md
sample_site/posts/2023/02/2023-02-27T11:50:58.939118-08:00_yellow/: index.html  post.md
sample_site/posts/2023/02/2023-02-28T04:33:05.001275-08:00_markdown-sample/: index.html  post.md
sample_site/tags/: boats.html  cars.html  github.html  markdown.html  nature.html  people.html  yellow.html
src/home_journal/: __init__.py  __main__.py  cli.py  run.py  utils.py
src/home_journal/site/: index.html  sw.js
src/home_journal/site/css/: beer.min.css  github-markdown.css  site.css
src/home_journal/site/js/: beer.min.js  lightense.min.js  material-dynamic-colors.min.js  new.js  post.js  site.js
src/home_journal/templates/: index.html.j2  new.html.j2  post.html.j2  post.md.j2
